# AlNassr-News-Monitor

./: .env.example  .gitignore  Dockerfile  SETUP.md  al-nassr-news-monitor.service  docker-compose.yml  pyproject.toml  requirements.txt
config/: sources.yaml
src/: __init__.py  config.py  database.py  logger.py  main.py  scheduler.py
src/models/: __init__.py  news.py
src/providers/: __init__.py  base_provider.py  google_news_rss.py  rss_provider.py
src/services/: __init__.py  ai_classifier.py  deduplication_service.py  email_service.py  news_collector.py
tests/: test_services.py
